@@ -370,388 +370,6 @@
   
 </table>
 
-<h2>Download LilyPond 1.8</h2>
-
-<a name=1.8></a>
-<table border="0" rules="rows" cellpadding="3">
-
-
-  <!-- use this as template for new entry !-->
-  <tr>
-    <th></th>
-    <th>Platform</th>
-    <th>Version</th>
-    <th>Go here</th>
-    <th>LilyPond version</th>
-    <th>Packager</th>
-  </tr>
-  
-<tr bgcolor="#e8ffe8" >
-<td></td><td colspan=6><h3>Linux</h3></td>
-  </tr>
-  
-  <tr>
-    <td>
-      <p align="center">
-	<img src="http://www.debian.org/logos/openlogo-nd-50.png">
-      </p>
-    </td>
-    <td>Debian</td>
-    <td>
-      Sid
-    </td>
-    <td>
-      <b>Run</b> <tt>apt-get install lilypond lilypond-doc</tt>
-    </td>
-    <td>1.8.1</td>
-    <td>Anthony Fok (Debian)</td>
-  </tr>
-
-  <tr>
-
-    <td><p align="center"><img src="@IMAGES@redhat-logo.png"></p></td>
-    <td>
-      Red Hat
-    </td>
-    <td>
-      9 
-    </td>
-    <td><b>Download 
-	<a href="http://lilypond.org/download/binaries/RedHat-9/lilypond-1.8.2-1.i386.rpm">lilypond</a>,
-	
-	<a
-	   href="http://lilypond.org/download/binaries/RedHat-9/lilypond-documentation-1.8.2-1.i386.rpm">documentation</a></b>
-      (<a href="#redhat-notes">NOTE</a>)
-    </td>
-    <td>1.8.2</td>  
-    <td><a href="mailto:bug-lilypond@gnu.org">LilyPond development team</a></td>
-  </tr>
-
-  <tr>
-    <td><p align="center"><img src="@IMAGES@redhat-logo.png"></p></td>
-    <td>
-      Red Hat 
-    </td>
-    <td>
-      8, 9
-    </td>
-    <td>
-      <b>Go to
-	<a
-	   href="http://www-ccrma.stanford.edu/planetccrma/software/soundapps.html#lilypond">
-	  Planet CCRMA</a>
-      </b>
-    </td>
-    <td>1.8.0</td>
-    <td>
-      <a href="mailto:planetccrma@ccrma.stanford.edu">
-	PlanetCCRMA</a></td>
-  </tr>
-
-
-  <tr>
-    <td><p align="center"><img src="@IMAGES@mandrake-logo.jpeg"></p></td>
-    <td>
-      Mandrake
-    </td>
-    <td>
-      9.1
-    </td>
-    <td>
-      <b>Go to <a href="http://rpm.nyvalls.se/sound9.1.html">
-	  Thac's RPMs for mandrake</a>
-      </b>
-      (<a href="#mandrake-notes">NOTE</a>)
-    </td>
-    <td>1.8.0</td>
-    <td>Thac's RPMs for Mandrake</td>
-  </tr>
-
-  <tr>
-    <td>
-      <p align="center">
-	<img src="http://www.suse.com/images/suse_logo.png">
-      </p>
-    </td>
-    <td>
-      SuSE
-    </td>
-    <td>
-  9.0
-    </td>
-    <td>
-      <b>Download
-	<a href="ftp://ftp.suse.com/pub/suse/i386/9.0/suse/i586/lilypond-1.8.1-59.i586.rpm">lilypond</a>,
-	<a href="ftp://ftp.suse.com/pub/suse/i386/9.0/suse/i586/lilypond-documentation-1.8.1-59.i586.rpm">documentation</a></b>
-    </td>
-    <td>1.8.1</td>  
-    <td>SuSE Gmbh.</td>
-  </tr>
-  
-  <tr>
-    <td><p align="center"><img src="@IMAGES@slackware-logo.png"></p></td>
-    <td>
-      Slackware 
-    </td>
-    <td>
-      9
-    </td>
-    <td>
-      <b>Download
-	<a href="ftp://ftp.connection.com.br/linux/slackware-9/lilypond/lilypond-1.8.1-i386-1.tgz">tarball</a></b>
-    </td>
-    <td>1.8.1</td>
-    <td><a href="mailto:hoffmannATuninetDOTcomDOTbr">Ricardo Hoffmann</a></td>
-  </tr>
-
-<tr bgcolor="#e8ffe8" >
-<td></td><td colspan=6><h3>Other</h3></td>
-  </tr>
-
-  <tr>
-    <td><p align="center"><img src="@IMAGES@macosx.jpeg"></p></td>
-    <td>
-      MacOS X/Fink
-    </td>
-    <td>
-      <tt>current-unstable</tt>
-    </td>
-    <td>
-      <b>  Go <a href="macos.html">here</a></b>
-    </td>
-    <td>1.8.1</td>  
-    <td>
-      <a href="mailto:neeracherATmacDOTcom">Matthias Neeracher</a>
-    </td> 
-  </tr>
-
-
-  <tr>
-    <td><p align="center"><img src="@IMAGES@windows.png"></p></td>
-    <td>MS Windows</td>
-    <td>
-      Prev
-    </td>
-    <td>
-      <b>Go <a href="windows.html">here</a></b>
-    </td>
-    <td>1.8.2-1</td>
-    <td>
-      <a href="mailto:bug-lilypond@gnu.org">LilyPond development team</a>
-    </td>
-  </tr>
-
-  <tr>
-    <td><img src="@IMAGES@daemon.png" alt="FreeBSD daemon"></td>
-    <td>FreeBSD</td>
-    <td>4, 5</td>
-    <td><b>Go
-	<a
-	   href="http://foo42.de/devel/lilypond-freebsd/">here</a>
-      </b>
-    </td>
-    <td>
-     1.8.2 
-    </td>
-    <td><a href="mailto:atamaniuk-ports@frobs.net">Patrick Atamaniuk
-	</a></td>
-  </tr>
-
-  <tr>
-    <td></td>
-    <td>Source</td><td></td>
-    <td>
-      <b>Download 
-	<a
-	   href="http://lilypond.org/download/v1.8/lilypond-1.8.2.tar.gz">tarball</a>
-      </b>
-      (<a href="../devel/#warning">warning</a>)
-    </td>
-    <td>
-      1.8.2
-    </td>
-    <td><a href="mailto:bug-lilypond@gnu.org">LilyPond development
-	team</a>
-    </td>
-
-  </tr>
-
-</table>
-
-
-<h2>Download LilyPond 1.6</h2>
-<a name=1.6></a>
-
-
-<table border="0" rules="rows" cellpadding="">
-
-  <tr>
-    <th></th>
-    <th>Platform</th>
-    <th>Version</th>
-    <th>Go here</th>
-    <th>LilyPond version</th>
-    <th>Packager</th>
-  </tr>
-
-  <tr>
-    <td>
-      <p align="center">
-	<img src="http://www.debian.org/logos/openlogo-nd-50.png">
-      </p>
-    </td>
-    <td>
-      Debian
-    </td>
-    <td>
-      Sid
-    </td>
-    <td>
-      <b>Go to
-	<a href="http://ftp.us.debian.org/debian/pool/main/l/lilypond/">ftp.xx.debian.org/debian/pool/main/l/lilypond</a>
-      </b>
-    </td>
-    <td>1.6.9</td>
-    <td>Anthony Fok</td>
-  </tr>
-
-
-  <tr>
-    <td>
-      <p align="center">
-	<img src="http://www.debian.org/logos/openlogo-nd-50.png">
-      </p>
-    </td>
-    <td>
-      Debian
-    </td>
-    <td>
-      Woody
-    </td>
-    <td>
-      <b>Download
-	<a
-	   href="http://serpent.laymusic.org/~lconrad/lilypond/lilypond_1.6.9-1_i386.deb">
-	  lilypond</a>,
-	<a
-	   href="http://serpent.laymusic.org/~lconrad/lilypond/lilypond-doc_1.6.9-1_all.deb">
-	  documentation</a></b>
-    </td>
-    <td>1.6.9</td>
-    <td>Laura Conrad</td>
-  </tr>
-  
-  
-  <tr>
-    <td><p align="center"><img src="@IMAGES@mandrake-logo.jpeg"></td>
-    <td>
-      Mandrake
-    </td>
-    <td>
-      9.0
-    </td>
-    <td>
-      <b>Go to
-	<a href="http://rpm.nyvalls.se/sound9.0.html">
-	  Thac's RPMs for mandrake</a>
-      </b>
-    </td>
-    <td>1.6.7</td>
-    <td>Thac's RPMs for Mandrake</td>  
-  </tr>
-
-
-  <tr>
-    <td>
-      <p align="center">
-	<img src="http://www.suse.com/images/suse_logo.png">
-      </p>
-    </td>
-    <td>
-      SuSE
-    </td>
-    <td>
-      8.2
-    </td>
-    <td>
-      <b>Download
-	<a href="ftp://ftp.suse.com/pub/suse/i386/8.2/suse/i586/lilypond-1.6.6-67.i586.rpm">lilypond</a>,
-	<a href="ftp://ftp.suse.com/pub/suse/i386/8.2/suse/i586/lilypond-documentation-1.6.6-67.i586.rpm">documentation</a></b>
-    </td>
-    <td>1.6.6</td>  
-    <td>SuSE Gmbh.</td>
-  </tr>
-
-  <tr>
-    <td><p align=center><img src="@IMAGES@slackware-logo.png"></p></td>
-    <td>
-      Slackware 
-    </td>
-    <td>
-      9
-    </td>
-    <td>
-      <b>Download
-	<a href="ftp://ftp.connection.com.br/linux/slackware-9/lilypond/lilypond-1.6.11-i386-1.tgz">here</a>
-      </b>
-    </td>
-    <td>1.6.11</td>
-    <td><a href="mailto:hoffmannATuninetDOTcomDOTbr">Ricardo Hoffmann</a></td>
-  </tr>
-
-  <tr>
-    <td><p align="center"><img src="@IMAGES@windows.png"></p></td>
-    <td>
-      MS Windows</td>
-    <td>
-      Current/[curr]
-    </td>
-    <td>
-      <b>Go <a href="windows.html">here</a></b>
-    </td>
-    <td>1.6.11</td>
-    <td>
-      <a href="mailto:bug-lilypond@gnu.org">LilyPond development team</a>
-    </td> 
-  </tr>
-
-  <tr>
-    <td><p align="center"><img src="@IMAGES@macosx.jpeg"></p></td>
-    <td>
-      MacOS X/Fink
-    </td>
-    <td>
-      ?
-    </td>
-    <td>
-      <b>Go <a href="macos.html">here</a>
-      </b>
-    </td>
-    <td>?</td>  
-    <td>?</td> 
-  </tr>
-
-
-  
-  <tr>
-    <td></td>
-    <td></td><td></td>
-    <td>
-      <b>Download 
-	<a
-	   href="http://lilypond.org/download/v1.6/lilypond-1.6.12.tar.gz">tarball</a>
-      </b>
-      (<a href="../devel/#warning">warning</a>)
-    </td>
-    <td>
-      1.6.12
-    </td>
-  </tr>
-
-  
-</table>
-
-
 
 <p>
   If your platform is not listed, please help by <a
