@@ -123,7 +123,7 @@
 	    <td>Old</td>
 	    <td>1.8.2</td>
 	    <td><a href="../doc/v1.8/Documentation/out-www/">Documentation</a>,
-	      <a href="download/#1.8">download</a>.
+	      <a href="download/older-versions.html#1.8">download</a>.
 	    </td>
 	  </tr>
 
@@ -132,7 +132,7 @@
 	    <td>1.6.12</td>
 	    <td>
 	      <a href="../doc/v1.6/Documentation/out-www/">Documentation</a>,
-	      <a href="download/#1.6">download</a>.
+	      <a href="download/older-versions.html#1.6">download</a>.
 	    </td>
 	  </tr>
       </table>
